// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users displays 1`] = `
"<div data-reactroot=\\"\\">
  <div>
    <div style=\\"padding-top:50px;padding-bottom:20px\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\">
        <div class=\\"container\\">
          <div class=\\"navbar-header\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\"><span class=\\"sr-only\\">Toggle navigation</span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span></button>
            <a class=\\"navbar-brand\\" href=\\"/\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\">
            <ul class=\\"nav navbar-nav navbar-right\\">
              <li>
                <a href=\\"/\\">Home</a>
              </li>
              <li>
                <a href=\\"/about\\">About</a>
              </li>
              <li>
                <a href=\\"/news\\">News</a>
              </li>
              <li class=\\"active\\">
                <a href=\\"/users\\">Sorters</a>
              </li>
              <li>
                <a href=\\"/login\\">Log in</a>
              </li>
              <li>
                <a href=\\"/register\\">Register</a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\">
      <h1>Sorters</h1>
      <p>Here is a list of all the sorters with a public profile.</p>
      <div class=\\"row\\"></div>
    </div>
    <footer>
      <div class=\\"container\\">
        <hr>
        <p>Brought to you with &#x2764; by
          <a href=\\"/about\\">Nick Redmark</a>. Support this platform on
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\">Patreon</a>.</p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`users displays a user 1`] = `
"<div data-reactroot=\\"\\">
  <div>
    <div style=\\"padding-top:50px;padding-bottom:20px\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\">
        <div class=\\"container\\">
          <div class=\\"navbar-header\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\"><span class=\\"sr-only\\">Toggle navigation</span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span></button>
            <a class=\\"navbar-brand\\" href=\\"/\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\">
            <ul class=\\"nav navbar-nav navbar-right\\">
              <li>
                <a href=\\"/\\">Home</a>
              </li>
              <li>
                <a href=\\"/about\\">About</a>
              </li>
              <li>
                <a href=\\"/news\\">News</a>
              </li>
              <li class=\\"active\\">
                <a href=\\"/users\\">Sorters</a>
              </li>
              <li>
                <a href=\\"/login\\">Log in</a>
              </li>
              <li>
                <a href=\\"/register\\">Register</a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\">
      <h1>Sorters</h1>
      <p>Here is a list of all the sorters with a public profile.</p>
      <div class=\\"row\\">
        <div class=\\"col-xs-12 col-md-6\\" style=\\"display:flex;margin-bottom:1.5rem;clear:both\\">
          <div>
            <a href=\\"/u/test\\">
              <img alt=\\"Gravatar for undefined\\" style=\\"margin-right:1.5rem\\" src=\\"//www.gravatar.com/avatar/test?d=retro&amp;r=g&amp;s=100\\" srcset=\\"//www.gravatar.com/avatar/test?d=retro&amp;r=g&amp;s=200 2x\\" height=\\"100\\" width=\\"100\\" class=\\"react-gravatar\\">
            </a>
          </div>
          <div>
            <h3 style=\\"margin-top:0\\">
              <a href=\\"/u/test\\">test</a>
            </h3>
            <a href=\\"/u/test\\">/u/ test</a>
            <div>
              <div></div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer>
      <div class=\\"container\\">
        <hr>
        <p>Brought to you with &#x2764; by
          <a href=\\"/about\\">Nick Redmark</a>. Support this platform on
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\">Patreon</a>.</p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`users displays a user with data 1`] = `
"<div data-reactroot=\\"\\">
  <div>
    <div style=\\"padding-top:50px;padding-bottom:20px\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\">
        <div class=\\"container\\">
          <div class=\\"navbar-header\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\"><span class=\\"sr-only\\">Toggle navigation</span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span></button>
            <a class=\\"navbar-brand\\" href=\\"/\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\">
            <ul class=\\"nav navbar-nav navbar-right\\">
              <li>
                <a href=\\"/\\">Home</a>
              </li>
              <li>
                <a href=\\"/about\\">About</a>
              </li>
              <li>
                <a href=\\"/news\\">News</a>
              </li>
              <li class=\\"active\\">
                <a href=\\"/users\\">Sorters</a>
              </li>
              <li class=\\"dropdownundefined\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\">Hello, test <span class=\\"caret\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\">
      <h1>Sorters</h1>
      <p>Here is a list of all the sorters with a public profile.</p>
      <div class=\\"row\\">
        <div class=\\"col-xs-12 col-md-6\\" style=\\"display:flex;margin-bottom:1.5rem;clear:both\\">
          <div>
            <a href=\\"/u/test\\">
              <img alt=\\"Gravatar for undefined\\" style=\\"margin-right:1.5rem\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=100\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=200 2x\\"
                height=\\"100\\" width=\\"100\\" class=\\"react-gravatar\\">
            </a>
          </div>
          <div>
            <h3 style=\\"margin-top:0\\">
              <a href=\\"/u/test\\">Test User</a>
            </h3>
            <a href=\\"/u/test\\">/u/ test</a>
            <div>
              <div class=\\"markdown\\">
                <p>Test user about</p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer>
      <div class=\\"container\\">
        <hr>
        <p>Brought to you with &#x2764; by
          <a href=\\"/about\\">Nick Redmark</a>. Support this platform on
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\">Patreon</a>.</p>
      </div>
    </footer>
  </div>
</div>"
`;
